# docs/swagger.json
@@ -117,7 +117,9 @@
                     "example": 500000
                 },
                 "wht": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0,
+                    "example": 25000
                 }
             }
         },
@@ -125,6 +127,9 @@
             "type": "object",
             "properties": {
                 "tax": {
+                    "type": "number"
+                },
+                "taxRefund": {
                     "type": "number"
                 }
             }
